// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverItem snapshots should render PopoverItem 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="0"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="align-horizontal-center"
      height="12"
      name="AlignHorizontalCenter"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      text
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverItem snapshots should render not visible 1`] = `<DocumentFragment />`;

exports[`PopoverItem snapshots should render selected 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="0"
  >
    <div
      class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="align-horizontal-center"
      height="12"
      name="AlignHorizontalCenter"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      text
    </small>
  </div>
</DocumentFragment>
`;
